[metadata]
name = networking-hpe
summary = HPE mechanism drivers for bare metal connectivity
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_hpe
data_files =
    etc/neutron =
        etc/ml2_conf_hpe.ini
        etc/hp_network_provisioning_conf.ini

[entry_points]
console_scripts =
    neutron-bnp = networking_hpe.bnpclient.bnp_client_ext.shell:main
neutron.db.alembic_migrations =
    networking-hpe = networking_hpe.db.migration:alembic_migrations
neutron.ml2.mechanism_drivers =
    hpe_bnp = networking_hpe.ml2.mechanism_hpe:HPEMechanismDriver
neutron.ml2.extension_drivers =
    bnp_ext_driver = networking_hpe.ml2.hpeironicextensiondriver:HPEIronicExtensionDriver
    bnp_cred_ext_driver = networking_hpe.ml2.hpe_ironic_credential_ext_driver:HPEIronicCredentialExtDriver
    bnp_switch_ports_ext_driver = networking_hpe.ml2.hpe_ironic_switch_ports_ext_driver:HPEIronicSwitchPortsExtDriver
bnpclient.extension =
    bnp_switch = networking_hpe.bnpclient.bnp_client_ext.bnpswitch._bnp_switch
    bnp_switchport =  networking_hpe.bnpclient.bnp_client_ext.bnpswitch._bnp_switchport
    bnp_credential = networking_hpe.bnpclient.bnp_client_ext.bnpcredential._bnp_credential
bnp.provisioning_driver =
    hpe_snmp = networking_hpe.drivers.snmp_provisioning_driver:SNMPProvisioningDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_hpe/locale
domain =  networking-hpe

[update_catalog]
domain = networking-hpe
output_dir = networking_hpe/locale
input_file = networking_hpe/locale/networking-hpe.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_hpe/locale/networking-hpe.pot
